test/inference/good/coreml_forall.mlt
let main =
  let id = ['a] fun (x : 'a) -> x in
  id 42