test/inference/bad/coreml_letpoly.mlt
let main =
  (fun id ->
     let x = id 0 in
     id 'a') (fun x -> x)